# multi-threaded-audio-converter

./: CMakeLists.txt  README.md
src/: Converter.cpp  Converter.h  main.cpp
